--- a/VidCoder/Resources/EncodingRes.resx
+++ b/VidCoder/Resources/EncodingRes.resx
@@ -112,10 +112,10 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Save" xml:space="preserve">
     <value>Save</value>
@@ -741,7 +741,7 @@ Overrides all other settings.</value>
   <data name="DeinterlaceToolTip" xml:space="preserve">
     <value>Deinterlace removes comb artifacts from the picture.
 
-Yadif is a popular and fast deinterlacer.
+Bwdif and Yadif are two popular and fast deinterlacers.
 
 Decomb switches between multiple interpolation algorithms for speed and quality.</value>
   </data>
